exploit chap and fixes

--- a/architettura.tex
+++ b/architettura.tex
@@ -5,8 +5,8 @@ In questo capitolo si descrive l'architettura alla quale si sta
 facendo riferimento per lo sviluppo di dropper.
 
 L'obiettivo di dropper è quello di generare, analizzando un file
-oggetto eseguibile, una catena di gadget che iniettata nello stack
-dell'immagine del processo associato a quell'eseguibile, consenta di
+oggetto eseguibile, una catena di gadget che se iniettata nello stack
+dell'immagine del processo associato a quell'eseguibile, consente di
 prenderne il controllo, eseguendo un comando arbitrario sulla
 macchina. Lo strumento deve poter applicare tecniche note per eludere
 misure di protezioni esistenti come la casualizzazione degli indirizzi
