--- a/tesi.bib
+++ b/tesi.bib
@@ -46,9 +46,14 @@ url={http://www.cs.cmu.edu/afs/cs/project/jair/pub/volume20/fox03a.pdf},
 }
 
 @MISC{pddl-97,
-    author = {},
+    author = { },
     title = {PDDL - The Planning Domain Definition Language},
-    year = {1997}
+    year = 1997
+}
+@MISC{sstrip,
+    author = {ELF Kickers },
+url={http://www.muppetlabs.com/~breadbox/software/elfkickers.html},
+    year = 1997
 }
 
 @inproceedings{Shacham-2007,
